@@ -23,6 +23,17 @@ The REST server launcher has been rewritten in Java. Changes include:
    main method) and returns an error status code if initialization fails.
  - The launcher will no longer hang if the server fails to stop.
 
+* BETA: Bootstrap for testing
+
+The Bootstrap class performs may initialization tasks for servers, but when
+testing not all installation tasks are desired.  Specifically, the Bootstrap
+class loads configuration properties from a file specified using System
+property.  The new setConfigurationProperty and setConfigurationProperties
+have been added to supply the properties directly.  Another, problematic
+task is logging initialization, which can now be disabled with the new
+doNotInitializeLogging() method.  For an example of a Bootstrap test see
+com.proofpoint.platform.sample.TestServer.
+
 * Configuration improvements
 
  - The ConfigurationFactory(Map<String, String> properties) constructor
